crates/embucket-functions/src/tests/aggregate/snapshots/listagg/query_listagg_empty_strings.snap
---
source: crates/embucket-functions/src/tests/aggregate/listagg.rs
description: "\"SELECT LISTAGG(val, '|') FROM mixed_strings\""
info: "Setup queries: CREATE TABLE mixed_strings AS SELECT * FROM (VALUES (''), ('a'), (''), ('b')) AS t(val)"
---
Ok(
    [
        "+--------------------------------------+",
        "| listagg(mixed_strings.val,Utf8(\"|\")) |",
        "+--------------------------------------+",
        "| a||b                                 |",
        "+--------------------------------------+",
    ],
)
