crates/embucket-functions/src/tests/aggregate/snapshots/listagg/query_listagg_space_delimiter.snap
---
source: crates/embucket-functions/src/tests/aggregate/listagg.rs
description: "\"SELECT LISTAGG(val, ' ') FROM test_words\""
info: "Setup queries: CREATE TABLE test_words AS SELECT * FROM (VALUES ('Hello'), ('World'), ('From'), ('LISTAGG')) AS t(val)"
---
Ok(
    [
        "+-----------------------------------+",
        "| listagg(test_words.val,Utf8(\" \")) |",
        "+-----------------------------------+",
        "| Hello World From LISTAGG          |",
        "+-----------------------------------+",
    ],
)
