crates/embucket-functions/src/tests/aggregate/snapshots/listagg/query_listagg_window_basic.snap
---
source: crates/embucket-functions/src/tests/aggregate/listagg.rs
description: "\"SELECT id, name, LISTAGG(name, ', ') OVER (PARTITION BY id) AS concatenated FROM food_items ORDER BY id, name\""
info: "Setup queries: CREATE TABLE food_items AS SELECT * FROM (VALUES (1, 'apple'), (1, 'banana'), (2, 'carrot'), (2, 'broccoli')) AS t(id, name)"
---
Ok(
    [
        "+----+----------+------------------+",
        "| id | name     | concatenated     |",
        "+----+----------+------------------+",
        "| 1  | apple    | apple, banana    |",
        "| 1  | banana   | apple, banana    |",
        "| 2  | broccoli | carrot, broccoli |",
        "| 2  | carrot   | carrot, broccoli |",
        "+----+----------+------------------+",
    ],
)
