crates/embucket-functions/src/tests/aggregate/snapshots/listagg/query_listagg_window_with_order.snap
---
source: crates/embucket-functions/src/tests/aggregate/listagg.rs
description: "\"SELECT id, name, LISTAGG(name, ' -> ') OVER (PARTITION BY id ORDER BY name) AS concatenated FROM food_items_unsorted ORDER BY id, name\""
info: "Setup queries: CREATE TABLE food_items_unsorted AS SELECT * FROM (VALUES (1, 'banana'), (1, 'apple'), (2, 'carrot'), (2, 'broccoli')) AS t(id, name)"
---
Ok(
    [
        "+----+----------+--------------------+",
        "| id | name     | concatenated       |",
        "+----+----------+--------------------+",
        "| 1  | apple    | apple              |",
        "| 1  | banana   | apple -> banana    |",
        "| 2  | broccoli | broccoli           |",
        "| 2  | carrot   | broccoli -> carrot |",
        "+----+----------+--------------------+",
    ],
)
