crates/embucket-functions/src/tests/aggregate/snapshots/listagg/query_listagg_with_nulls.snap
---
source: crates/embucket-functions/src/tests/aggregate/listagg.rs
description: "\"SELECT LISTAGG(val, ', ') FROM (VALUES ('apple'), (NULL), ('banana'), (NULL), ('cherry')) AS t(val)\""
---
Ok(
    [
        "+---------------------------+",
        "| listagg(t.val,Utf8(\", \")) |",
        "+---------------------------+",
        "| apple, banana, cherry     |",
        "+---------------------------+",
    ],
)
